// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FighterIcon renders with different color 1`] = `
<div
  className="extra sc-ifAKCX gxUpRL"
  position={0}
>
  <div>
    <div
      className="extra sc-bdVaJa cdKNHG"
    >
      <i
        aria-hidden="true"
        className="blue heart outline big icon sc-bwzfXH gNTOrh"
      />
      <div
        className="sc-htpNat gmYomR"
        color="blue"
      >
        0
      </div>
    </div>
  </div>
</div>
`;

exports[`FighterIcon renders with different icon 1`] = `
<div
  className="extra sc-ifAKCX gxUpRL"
  position={0}
>
  <div>
    <div
      className="extra sc-bdVaJa cdKNHG"
    >
      <i
        aria-hidden="true"
        className="red shield big icon sc-bwzfXH gNTOrh"
      />
      <div
        className="sc-htpNat cByMRF"
        color="red"
      >
        0
      </div>
    </div>
  </div>
</div>
`;

exports[`FighterIcon renders with different number 1`] = `
<div
  className="extra sc-ifAKCX gxUpRL"
  position={0}
>
  <div>
    <div
      className="extra sc-bdVaJa cdKNHG"
    >
      <i
        aria-hidden="true"
        className="red heart outline big icon sc-bwzfXH gNTOrh"
      />
      <div
        className="sc-htpNat cByMRF"
        color="red"
      >
        4
      </div>
    </div>
  </div>
</div>
`;

exports[`FighterIcon renders with different position 1`] = `
<div
  className="extra sc-ifAKCX fCitBk"
  position={1}
>
  <div>
    <div
      className="extra sc-bdVaJa cdKNHG"
    >
      <i
        aria-hidden="true"
        className="red heart outline big icon sc-bwzfXH gNTOrh"
      />
      <div
        className="sc-htpNat cByMRF"
        color="red"
      >
        0
      </div>
    </div>
  </div>
</div>
`;

exports[`FighterIcon renders with no props 1`] = `
<div
  className="extra sc-ifAKCX gxUpRL"
  position={0}
>
  <div>
    <div
      className="extra sc-bdVaJa cdKNHG"
    >
      <i
        aria-hidden="true"
        className="red heart outline big icon sc-bwzfXH gNTOrh"
      />
      <div
        className="sc-htpNat cByMRF"
        color="red"
      >
        0
      </div>
    </div>
  </div>
</div>
`;
